--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,18 @@
-add_library(SIOClient SIOClient.cpp  SIOClientImpl.cpp  SIOClientRegistry.cpp  SIOEventRegistry.cpp  SIONotificationHandler.cpp  SIOPacket.cpp)
+add_library(SIOClient "")
+target_sources(SIOClient
+    PRIVATE
+        SIOClient.cpp  
+        SIOClientImpl.cpp  
+        SIOClientRegistry.cpp
+        SIOEventRegistry.cpp
+        SIONotificationHandler.cpp
+        SIOPacket.cpp
+)
+
+target_link_libraries(SIOClient
+    PUBLIC 
+        Poco::JSON
+        OpenSSL::SSL
+)
+
+add_subdirectory(include)
